# parallel-computing-benchmark-suite

./: .gitignore  CMakeLists.txt  README.md
src/: cpu_matmul.cpp  cpu_matmul.hpp  hip_matmul.hip  hip_matmul.hpp  main.cpp  matrix.hpp  openmp_matmul.cpp  openmp_matmul.hpp  timer.hpp
